@@ -22,6 +22,7 @@ DETAILED CHANGELOG:
 	+ Added separate ID counter for edges while autoresolving missing id 
 	+ Added EdgeControl::UpdateLabel() method to be able to update attached edge label manually (tech means to overcome some template quizes)
 	+ Added GraphArea::GetChildControls() method to easily fetch any child objects (incl. custom) by condition or just get all of them
+	+ Fixed id autoresolve issue when calling GraphArea::GenerateAllEdges() after manual edge data compilation (thanks to Hannes Hasenauer)
 	+ Fixed some METRO code not that hasn't been ported correctly
 	+ Fixed an exception in ZoomControl caused by Ctrl + Alt + DblClick combination (thanks to persalmi)
 	+ Fixed NaN result for FR algorithms calc (thanks to bleibold)
